// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RichDropdown/> should render a rich dropdown 1`] = `
<div
  class=""
>
  <div
    class="btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-secondary"
      type="button"
    >
      foo
    </button>
    <div
      aria-hidden="true"
      class="dropdown dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Foo
        <br />
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Bar
        <br />
        <span
          class="description"
        >
          foobar
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<RichDropdown/> should render a rich dropdown 2`] = `
<div
  class=""
>
  <div
    class="btn-group"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-secondary"
      type="button"
    >
      foo
    </button>
    <div
      aria-hidden="true"
      class="dropdown dropdown-menu"
      role="menu"
      tabindex="-1"
    >
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="dropdown-header"
        tabindex="-1"
      >
        FOO
      </h6>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Foo
        <br />
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Bar
        <br />
        <span
          class="description"
        >
          foobar
        </span>
      </button>
      <div
        class="dropdown-divider"
        tabindex="-1"
      />
      <h6
        class="dropdown-header"
        tabindex="-1"
      >
        BAR
      </h6>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Foo
        <br />
      </button>
      <button
        class="dropdown-item"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        Bar
        <br />
        <span
          class="description"
        >
          foobar
        </span>
      </button>
    </div>
  </div>
</div>
`;
